Yauhen_Zakharanka/12.Kubernetes.Data.Security/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-server
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 75m
              memory: 75Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: index
          - mountPath: /root/.ssh/
            name: ssh-key

      volumes:
      - name: test-config-mount
        configMap:
          name: test-config
      - name: index
        emptyDir: {}
      - name: ssh
        emptyDir: {}
      - name: ssh-key
        secret:
          secretName: ssh-keys

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    run: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: nginx-test.k8s-7.sa
spec:
  rules:
    - host: nginx-test.k8s-7.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
